--- a/sections/_config.yml
+++ b/sections/_config.yml
@@ -1,6 +1,6 @@
 
 # Book settings
-title                       : Styleguide for workshops  # The title of the book. Will be placed in the left navbar.
+title                       : Data  # The title of the book. Will be placed in the left navbar.
 author                      : Rafia Mirza, & <a href="https://www.smu.edu/libraries/scholarship/srstudio.">Scholarship & Research Studio </a> staff.   # The author of the book
 copyright                   : Creative Commons Attribution-ShareAlike 4.0 International License.  # Copyright year to be placed in the footer
 logo                        : logo.png  # A path to the book logo
@@ -51,7 +51,7 @@ launch_buttons:
   colab_url                 : "" # The URL of Google Colab (https://colab.research.google.com)
 
 repository:
-  url                       : https://github.com/SouthernMethodistUniversity/intro-to-python # The URL to your book's repository
+  url                       : https://github.com/SouthernMethodistUniversity/datalifecycle # The URL to your book's repository
   path_to_book              : ""  # A path to your book's folder, relative to the repository root.
   branch                    : main  # Which branch of the repository should be used when creating links
 
